# zero

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/zero-engine/: Cargo.toml
crates/zero-engine/examples/: jsbench.rs
crates/zero-engine/src/: anim.rs  css.rs  dom.rs  html.rs  layout.rs  lib.rs  paint.rs  resource.rs  style.rs  svg.rs  text.rs
crates/zero-engine/src/js/: dom.rs  interp.rs  lexer.rs  mod.rs  parser.rs  regex.rs
crates/zero-shell/: Cargo.toml
crates/zero-shell/src/: ai.rs  app.rs  blocker.rs  cookies.rs  crypto.rs  fonts.rs  i18n.rs  internal.rs  localstore.rs  main.rs  net.rs  renderer.rs  sandbox.rs  settings.rs  spaces.rs  storage.rs  sync.rs  wire.rs
crates/zero-shell/tests/: renderer_process.rs
docs/: 00-PRD.md  01-ARCHITECTURE.md  02-UI-UX-SPEC.md  03-ROADMAP.md  04-SECURITY-PRIVACY.md
examples/: css2.html  dom.html  effects.html  flex.html  flex2.html  forms.html  grid.html  grid2.html  image-test.html  indic.html  inline-block.html  inline.html  interactive.html  js-classes.html  js-modern.html  js-objects.html  js.html  live-form.html  query.html  sample-page.html  storage.html  table.html  table2.html  test.css  test.html  units.html
tools/: crop.py
