[package]
name = "zero-engine"
version = "0.1.0"
edition = "2021"
description = "Zero Browser rendering engine — embeddable, UI-agnostic. Build your own browser on it."
license = "Apache-2.0"

[lib]
name = "zero_engine"

[dependencies]
# Font rasterization is core content rendering (unlike PNG/windowing, which are the
# embedder's job). fontdue is a small pure-Rust TTF rasterizer. The embedder still
# supplies the font *bytes* — the engine stays platform-agnostic.
fontdue = "0.9"
# Text shaping (HarfBuzz port). Required for correct Indic rendering: matra reordering,
# conjuncts, and mark positioning are not expressible as one-glyph-per-character.
rustybuzz = "0.20"
# Decoding content images (<img>) is core rendering too — like fonts. The embedder
# still fetches the bytes; the engine decodes them. (Output PNG encoding stays in the shell.)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
